--- a/templates/consulta.html
+++ b/templates/consulta.html
@@ -49,6 +49,10 @@
                         <value>{{ oficina }}</value>
                     </div>
                     <div class="trade-field">
+                        <label>Placa do Veículo</label>
+                        <value>{{ placa }}</value>
+                    </div>
+                    <div class="trade-field">
                         <label>Fabricante</label>
                         <value>{{ marca }}</value>  
                     </div>
