--- a/static/style/index.css
+++ b/static/style/index.css
@@ -95,7 +95,7 @@ nav a:hover {
 .dropdown-menu {
     position: absolute;
     right: 0;
-    top: calc(100% + 6px);
+    top: 100%;
     background: white;
     color: var(--text-color);
     border-radius: 6px;
